@@ -158,6 +158,9 @@ Release 2.7.3 - UNRELEASED
     HDFS-9917. IBR accumulate more objects when SNN was down for sometime.
     (Brahma Reddy Battula via vinayakumarb)
 
+    HDFS-10239. Fsshell mv fails if port usage doesn't match in src and
+    destination paths (Kuhu Shukla via kihwal)
+
 Release 2.7.2 - 2016-01-25
 
   INCOMPATIBLE CHANGES
